--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet Transcriber</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trans-Crab Popup</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Popup container -->
     <div class="popup-container">
-        <img src="crab-icon.png" alt="Smart Crab" class="crab-icon">
-        <h2>Meet Transcriber</h2>
-
-        <button id="transcribe-btn">▶️ Start Transcribing</button>
-        <p id="status">Not transcribing</p>  <!-- ✅ Timer will update here -->
+      <img src="crab-icon16.png" alt="Smart Crab" class="crab-icon" />
+      <h2>Your meeting assistant🦀📝</h2>
+      <button id="transcribe-btn">▶️ Start Transcribing</button>
+      <p id="status">Not transcribing</p>
     </div>
-
     <script src="popup.js"></script>
-</body>
+  </body>
 </html>
